# ufcscraper

./: .coveragerc  .readthedocs.yaml  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: mypy.yml  python--app.yml  python-app.yml
ufcscraper/: base.py  bets_scraper.py  catch_weights.py  event_scraper.py  fight_scraper.py  fighter_names.py  fighter_scraper.py  odds_scraper.py  ufc_scraper.py  utils.py
ufcscraper/odds_scraper/: __init__.py  bet365_odds_reader.py  bfo_scraper.py
ufcscraper/scripts/: check_missing_records.py  consolidate_bet365_odds.py  read_bet365_odds.py  scrape_bestfightodds_data.py  scrape_ufcstats_data.py
ufcscraper/tests/: tests_event_scraper.py  tests_fight_scraper.py  tests_fighter_scraper.py  tests_odds_scraper.py
ufcscraper/tests/test_files/: event_data.csv  fight_data.csv  fight_data_partial.csv  fighter_data.csv  fighter_names.csv
